--- a/WebContent/views/desktop/gestion/donativo/registro/RegistroDonativoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/RegistroDonativoFormBasic.zul
@@ -6,56 +6,43 @@
 			<div class="col s12">
 				<div class="row">
 					<div class="input-field col s6">
+						<n:label for="fecha_trabajo_social"
+							class="active">
+							Fecha:
+						</n:label>
+						<datebox id="fecha_donativo" readonly="true"
+							cols="20" format="dd/MM/yyyy" />
+					</div>
+					<div class="input-field col s6">
 						<n:label for="direccion">Descripción</n:label>
-						<span
-							sclass="fa fa-question-circle fa-lg help-icon-special"
-							tooltip="pop_direccion, position=after_end" />
+
 						<textbox id="direccion" type="text"
 							sclass="materialize-textarea" multiline="true"
 							value="@bind(vm.donativoRecurso.descripcion)">
 						</textbox>
 					</div>
-			
+
 					<div class="input-field col s6">
-						<n:label for="direccion">Cantidad</n:label>
-						<span
-							sclass="fa fa-question-circle fa-lg help-icon-special"
-							tooltip="pop_direccion, position=after_end" />
-						<textbox id="cantidad" type="text"
-							sclass="materialize-textarea" multiline="true"
-							value="@bind(vm.donativoRecurso.cantidad)">
-						</textbox>
+						<n:label for="cantidad">Cantidad</n:label>
+
+						<doublebox id="cantidad"></doublebox>
 					</div>
 				</div>
 
-					<div class="input-field col s5">
-						<n:label for="lugar" class="active">
-							Lugar de Recepción:
-						</n:label>
-						<textbox id="lugar" type="text" disabled="true"
-							value="@bind(vm.directorio.direccion)">
-						</textbox>
-					</div>
-					<div class="input-field col s1"
-						style="font-size: 2em;">
-						<button
-							sclass="teal lighten-1 waves-effect waves-light"
-							onClick="@command('buscarDirectorio')" iconSclass="fa fa-search"
-							style="padding: 5px 15px; background-color: #2AA4EF !important">
-						</button>
+				<div class="input-field col s5">
+					<n:label for="lugar" class="active">
+						Lugar de Recepción:
+					</n:label>
 
-					</div>
+					<combobox id="lugar"
+						model="@bind(vm.recepcionEnums)"
+						selectedItem="@bind(vm.recepcionEnum)">
+						<template name="model">
+							<comboitem label="@load(each)" />
+						</template>
+					</combobox>
+				</div>
 
-
-					<div class="input-field col s6">
-						<n:label for="fecha_trabajo_social"
-							class="active">
-							Fecha:
-						</n:label>
-						<datebox id="fecha_donativo"
-							readonly="true" cols="20" format="dd/MM/yyyy"
-							value="@bind(vm.donativoRecurso.fechaDonativo)" />
-					</div>
 			</div>
 
 		</div>
