--- a/WebContent/assets/css/components-jarvis.css
+++ b/WebContent/assets/css/components-jarvis.css
@@ -691,7 +691,7 @@ nav-list.z-navbar>ul>.z-nav-open>a i,.nav-list.z-navbar>ul>.z-nav-open>a span
 }
 
 .container_reporte {
-    background: #FFFF;
+    background: #FFFFFF;
     padding: 12px 4px;
     border: 3px solid #8AC7DE;
     margin-bottom: 20px;
