--- a/WebContent/views/desktop/gestion/donativo/registro/selectColaborador.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectColaborador.zul
@@ -3,7 +3,8 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Colaborador del que provino el Donativo"
+				<label
+					value="Seleccione el Colaborador del que provino el Donativo"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -14,28 +15,25 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox id="listbox"
-							model="@load(vm.objectsList)"
-							selectedItem="@bind(vm.selectedObject)">
+						<listbox model="@load(vm.colaboradores)"
+							selectedItem="@bind(vm.colaborador)">
 
 							<listhead sizable="true">
-								<listheader width="50%" label="Nombre" />
+
 								<listheader width="50%"
-									label="Cédula" />
+									label="Identificación" />
+								<listheader width="50%"
+									label="Nombres y Apellidos" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.colaborador.fkPersona.nombre)" />
+										label="@load(each.fkPersona.identificacion)" />
 									<listcell
-										label="@load(each.colaborador.fkPersona.cedula)" />
-									<listcell
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
+								</listitem>
 							</template>
-							<listfoot>
-								<listfooter id="listFoot" span="2"
-									use="karen.core.listfoot.ListFoot">
-								</listfooter>
-							</listfoot>
+
 						</listbox>
 					</div>
 				</div>
