--- a/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
@@ -3,7 +3,8 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Patrocinador del que provino el Donativo"
+				<label
+					value="Seleccione el Patrocinador del que provino el Donativo"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -14,28 +15,27 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox id="listbox"
-							model="@load(vm.objectsList)"
+						<listbox model="@load(vm.objectsList)"
 							selectedItem="@bind(vm.selectedObject)">
 
 							<listhead sizable="true">
-								<listheader width="50%" label="Nombre" />
-								<listheader width="50%"
-									label="Cédula" />
+								<listheader width="30%"
+									label="Identificación" />
+								<listheader width="80%" label="Padrino" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.padrino.fkPersona.nombre)" />
+										label="@load(each.fkPersona.identificacion)">
+									</listcell>
 									<listcell
-										label="@load(each.padrino.fkPersona.cedula)" />
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 									<listcell
+										label="@load(each.fkFrecuenciaAporte.nombre)" />
+									<listcell label="@load(each.monto)" />
+
+								</listitem>
 							</template>
-							<listfoot>
-								<listfooter id="listFoot" span="2"
-									use="karen.core.listfoot.ListFoot">
-								</listfooter>
-							</listfoot>
 						</listbox>
 					</div>
 				</div>
