--- a/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
@@ -3,39 +3,34 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Padrino del que provino el Donativo"
+				<label
+					value="Seleccione el Padrino del que provino el Donativo"
 					sclass="label-medium-500">
 				</label>
 			</div>
 
 		</div>
 		<div width="100%">
-
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox id="listbox"
-							model="@load(vm.objectsList)"
-							selectedItem="@bind(vm.selectedObject)">
-
+						<listbox model="@load(vm.patrocinadores)"
+							selectedItem="@bind(vm.patrocinador)">
 							<listhead sizable="true">
-								<listheader width="50%" label="Nombre" />
-								<listheader width="50%"
-									label="Cédula" />
+								<listheader width="20%"
+									label="Identificación" />
+								<listheader width="80%"
+									label="Patrocinador" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.patrocinador.fkPersona.nombre)" />
+										label="@load(each.fkPersona.identificacion)" />
+									</listcell>
 									<listcell
-										label="@load(each.patrocinador.fkPersona.cedula)" />
-									<listcell
+										label="@load(each.fkPersona.nombre)" />
+								</listitem>
 							</template>
-							<listfoot>
-								<listfooter id="listFoot" span="2"
-									use="karen.core.listfoot.ListFoot">
-								</listfooter>
-							</listfoot>
 						</listbox>
 					</div>
 				</div>
