--- a/WebContent/views/desktop/gestion/ayudas/egresoBeneficiario/selectBeneficiario.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoBeneficiario/selectBeneficiario.zul
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Solicitante"
+				<label value="Seleccione la Solicitud de Ayuda"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -23,18 +23,13 @@
 
 							<listhead sizable="true">
 					
-							<listheader width="20%" label="Nombre de Solicitante" />
-							<listheader width="20%" label="Apellido de Solicitante" />
-							<listheader width="20%" label="Identificacion" />
-							
+							<listheader width="20%" label="Nombre de Beneficiario" />
 						
 							</listhead>
 							<template name="model">
 								<listitem>
 								
 								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
-								<listcell label="@load(each.fkPersona.identificacion)" />
 									
 								</listitem>
 							</template>
