--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Familiar"
+				<label value="Seleccione la Solicitud de Ayuda"
 					sclass="label-medium-500">
 				</label>
 			</div>
