--- a/WebContent/views/desktop/gestion/apadrinamiento/egreso/EgresoPadrinoIndex.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/egreso/EgresoPadrinoIndex.zul
@@ -1,46 +1,48 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='${arg.animation_}'
-		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
+	<div class="wizard ${arg.animation_} container"
+		use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.gestion.apadrinamiento.egreso.viewmodels.VM_EgresoPadrinoIndex')">
+		
+		<div class="row">
+			<div id="ulHeaderWizard" use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard"></div>
+
+			<div sclass="col s12">
+				<include id="include" src="@bind(vm.srcPageContent)"></include>
+			</div>
+
+		</div>
 
 		<div class="row">
-			<div class="col s12">
-				<div class="col s12">
-					<listbox id="listbox" model="@load(vm.objectsList)"
-						selectedItem="@bind(vm.selectedObject)">
-						<listhead sizable="true">
-							<listheader width="25%" label="Nombre" />
-							<listheader width="25%" label="Apellido" />
-							<listheader width="25%" label="Frecuencia de aporte" />
-							<listheader width="25%" label="Fecha de ingreso" />
-							<listheader width="25%" label="Fecha de egreso" />
-							<listheader width="25%" label="Monto" />
-							
-						</listhead>
-						<template name="model">
-							<listitem>
-								<listcell label="@load(each.fkPersona.nombre)" />
-								<listcell label="@load(each.fkPersona.apellido)" />
-								<listcell label="@load(each.fkFrecuenciaAporte.nombre)" />
-								<listcell label="@load(each.fechaIngreso)" />
-								<listcell label="@load(each.fechaSalida)" />
-								<listcell label="@load(each.monto)" />
-								
-							</listitem>
-						</template>
-						<listfoot>
-							<listfooter id="listFoot" span="6"
-								use="karen.core.listfoot.ListFoot">
-							</listfooter>
-						</listfoot>
-					</listbox>
+			<div class="col s6 offset-s3" align="center">
+				<div id="divButtonsWizard" sclass="row"
+					use="karen.core.simple_list.wizard.buttons.containers.DivButtonsWizard">
 				</div>
 			</div>
 		</div>
-
-		<toolbar id="toolbar" align="center"
-			use="karen.core.toolbar.Toolbar">
-		</toolbar>
 	</div>
+
+	<style>
+		.wizard li.active span.round-tab { background: #f5f5f5; border:
+		2px solid #3b85a1; }
+
+
+		.wizard li.active i { color: #3b85a1!important; }
+
+
+		.wizard span.round-tab { width: 70px; height: 70px; line-height:
+		70px; display: inline-block; border-radius: 100px; background:
+		#f5f5f5; border: 2px solid #e0e0e0; z-index: 2; position:
+		absolute; left: 0; text-align: center; font-size: 25px; }
+
+		.wizard li:after { content: " "; position: absolute; left:
+		46.5%; opacity: 0; margin: 0 auto; bottom: 0px; border: 11px
+		solid transparent; border-bottom-color: #3b85a1; transition:
+		0.1s ease-in-out; }
+
+		.wizard .nav-tabs { border-bottom: 1px solid #3b85a1 !important;
+		}
+
+		.wizard { margin: 20px auto; background: transparent; }
+	</style>
 </zk>
