--- a/WebContent/views/desktop/gestion/apadrinamiento/postulacion/motivoRechazo.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/postulacion/motivoRechazo.zul
@@ -1,42 +1,41 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Ingrese la información de contacto del padrino" sclass="label-medium-500"></label>
+			<div class="col s12" align="center"
+				style="margin-bottom: 15px;">
+				<label
+					value="Ingrese la información de contacto del padrino"
+					sclass="label-medium-500">
+				</label>
 			</div>
 		</div>
-		
+
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
-					<div class="input-field col s6">
-								<n:label for="frecuencia" class="active">Frecuencia de aporte</n:label>
-								<textbox id="frecuencia" type="text" disabled="true" value="@bind(vm.selectedObject.fkFrecuenciaAporte.nombre)"> </textbox>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
-								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" disabled="true" value="@bind(vm.selectedObject.fechaIngreso)"/>
-							</div>
-								
-							<div class="input-field col s6">
-								<n:label for="monto" class="active">Monto</n:label>
-								<textbox id="monto" type="text" disabled="true" value="@bind(vm.selectedObject.monto)"> </textbox>
-							</div>
-							<div class="input-field col s6">
-						<n:label for="motivo" class="active">Motivo de Rechazo</n:label>
-						
-						<combobox id="motivo" readonly="true" model="@load(vm.motivos)" selectedItem="@bind(vm.motivo)">
+					<div class="input-field col s12">
+						<n:label for="motivo" class="active">
+							Motivo de Rechazo
+						</n:label>
+						<combobox id="motivo" readonly="true"
+							model="@load(vm.motivos)"
+							placeholder="Seleccione el Motivo del Rechazo"
+							selectedItem="@bind(vm.selectedObject.fkMotivo)">
 							<template name="model">
 								<comboitem label="@load(each.nombre)" />
 							</template>
 						</combobox>
 					</div>
 					<div class="input-field col s12">
-						<n:label for="observacion" class="active">Observación</n:label>
-						<textbox id="observacion" type="text" maxlength="400" multiline="true" class="materialize-textarea" value="@load(each.motivo)"> </textbox>
+						<n:label for="observacion" class="active">
+							Observación
+						</n:label>
+						<textbox id="observacion" type="text"
+							maxlength="400" multiline="true" class="materialize-textarea"
+							value="@bind(vm.selectedObject.observacion)">
+						</textbox>
 					</div>
-				
+
 				</div>
 			</div>
 		</div>
