--- a/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/padrino/PadrinoFormBasic.zul
@@ -15,8 +15,7 @@
 							label="Datos principales" selected="true" />
 						<tab id="tabContacto"
 							label="Información de contacto" />
-						<tab id="tabPadrino"
-							label="Apadrinamiento" />
+						<tab id="tabPadrino" label="Apadrinamiento" />
 					</tabs>
 
 					<tabpanels>
@@ -32,7 +31,7 @@
 									readonly="true" model="@bind(vm.tipoPersonaEnums)"
 									selectedItem="@bind(vm.padrino.fkPersona.tipoPersonaEnum)">
 									<template name="model">
-										<comboitem label="@load(each)" />
+										<comboitem label="@load(each )" />
 									</template>
 								</combobox>
 								<span
@@ -48,7 +47,8 @@
 									</n:label>
 
 									<textbox id="identificacion"
-										type="text" value="@bind(vm.padrino.fkPersona.identificacion)">
+										type="text"
+										value="@bind(vm.padrino.fkPersona.identificacion)">
 									</textbox>
 									<span
 										sclass="fa fa-question-circle fa-lg help-icon-special"
@@ -105,7 +105,7 @@
 										tooltip="pop_fecha_nacimiento, position=after_end" />
 									<datebox id="db" cols="20"
 										readonly="true" format="dd/MM/yyyy"
-										value="@bind(vm.padrino.fkPersona.fechaNacimiento)" />
+										value="@bind(vm.fechaNacimiento)" />
 								</div>
 							</div>
 
@@ -116,7 +116,8 @@
 										RIF
 									</n:label>
 									<textbox id="identificacionRif"
-										type="text" value="@bind(vm.padrino.fkPersona.identificacion)">
+										type="text"
+										value="@bind(vm.padrino.fkPersona.identificacion)">
 									</textbox>
 									<span
 										sclass="fa fa-question-circle fa-lg help-icon-special"
@@ -167,7 +168,7 @@
 								<combobox id="fk_ciudad" readonly="true"
 									placeholder="Seleccione una ciudad"
 									disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)"
-									selectedItem="@bind(vm.persona
+									selectedItem="@bind(vm.padrino.fkPersona
 									.fkCiudad)">
 									<template name="model">
 										<comboitem
@@ -188,7 +189,7 @@
 										tooltip="pop_fecha_ingreso, position=after_end" />
 									<datebox id="fecha_ingreso"
 										cols="20" format="dd/MM/yyyy" readonly="true"
-										value="@bind(vm.padrino.fechaIngreso)" />
+										value="@bind(vm.fechaIngreso)" />
 								</div>
 
 								<div class="input-field col s12">
@@ -210,7 +211,7 @@
 										sclass="fa fa-question-circle fa-lg help-icon"
 										tooltip="pop_imagen, position=after_end" />
 									<uploadImageSingle maxsize="9000"
-										size="200" idUpload="1" title="Imagen del Colaborador" />
+										size="200" idUpload="1" title="Imagen del Padrino" />
 								</div>
 							</div>
 
@@ -219,7 +220,8 @@
 						<tabpanel>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="telefono_1">
+								<n:label class="active"
+									for="telefono_1">
 									Teléfono 1
 								</n:label>
 								<span
@@ -231,7 +233,8 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="telefono_2">
+								<n:label class="active"
+									for="telefono_2">
 									Teléfono 2
 								</n:label>
 								<span
@@ -243,7 +246,9 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="fax">Fax</n:label>
+								<n:label class="active" for="fax">
+									Fax
+								</n:label>
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_fax, position=after_end" />
@@ -265,7 +270,9 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="twitter">Twitter</n:label>
+								<n:label class="active" for="twitter">
+									Twitter
+								</n:label>
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_twitter, position=after_end" />
@@ -275,7 +282,8 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="instagram">
+								<n:label class="active"
+									for="instagram">
 									Instagram
 								</n:label>
 								<span
@@ -287,7 +295,8 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="facebook">
+								<n:label class="active"
+									for="facebook">
 									Facebook
 								</n:label>
 								<span
@@ -299,7 +308,8 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="linkedin">
+								<n:label class="active"
+									for="linkedin">
 									LinkedIn
 								</n:label>
 								<span
@@ -311,7 +321,8 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="sitioWeb">
+								<n:label class="active"
+									for="sitioWeb">
 									Sitio web
 								</n:label>
 								<span
@@ -323,34 +334,32 @@
 							</div>
 
 						</tabpanel>
-						
+
 						<tabpanel>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="frecuencia_aporte">
+								<n:label class="active"
+									for="frecuencia_aporte">
 									Frecuencia de Aporte
 								</n:label>
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_frecuencia, position=after_end" />
-							    <textbox id="frecuencia_aporte" type="text"
-									value="@bind(vm.padrino.fkFrecuenciaAporte.nombre)">
-								</textbox>	
-			<!--  					
-								<combobox id="fk_frecuencia" readonly="true"
+
+								<combobox id="fk_frecuencia"
+									readonly="true"
 									placeholder="Seleccione una frecuencia de aporte"
-									disabled="@load(empty vm.frecuencia)" model="@bind(vm.frecuencia)"
-									selectedItem="@bind(vm.padrino.fkFrecuenciaAporte.nombre)">
+									model="@bind(vm.frecuenciaAporte)"
+									selectedItem="@bind(vm.padrino.fkFrecuenciaAporte)">
 									<template name="model">
 										<comboitem
 											label="@load(each.nombre)" />
 									</template>
 								</combobox>
-								
-			-->					
+
 							</div>
-							
-							
+
+
 							<div class="input-field col s6">
 								<n:label class="active" for="monto">
 									Monto de Aporte
@@ -362,10 +371,10 @@
 									value="@bind(vm.padrino.monto)">
 								</textbox>
 							</div>
-							
+
 						</tabpanel>
-						
-						
+
+
 
 					</tabpanels>
 
@@ -379,9 +388,15 @@
 		<popup id="pop_persona" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique el tipo de persona del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Natural.</font> ]]>
+				
+				
+				
 				
 				
         	</html>
@@ -390,26 +405,44 @@
 		<popup id="pop_identificacion" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique la Cédula del
-				Padrino que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: V-19302871.</font> ]]>
+
+
+				
+				<![CDATA[ Por favor, indique la Cédula del Padrino que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				V-19302871.</font> ]]>
+				
+				
+				
 	</html>
 		</popup>
 
 		<popup id="pop_identificacion_rif" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique el RIF del
-				Padrino que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: J-19302871-8.</font> ]]>
+
+
+				
+				<![CDATA[ Por favor, indique el RIF del Padrino que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				J-19302871-8.</font> ]]>
+				
+				
+				
 	</html>
 		</popup>
 		<popup id="pop_nombre" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique el nombre del Padrino
-				que desea registrar.<br /><font color="#3b85a1">Ejemplo:
+
+
+				
+				<![CDATA[ Por favor, indique el nombre del Padrino que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
 				Christopher o Constructora S.A.</font> ]]>
+				
+				
+				
 	
         	</html>
 		</popup>
@@ -417,9 +450,15 @@
 		<popup id="pop_apellido" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique el apellido del
-				Padrino que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: Hemsworth.</font> ]]>
+
+
+				
+				<![CDATA[ Por favor, indique el apellido del Padrino que
+				desea registrar.<br /><font color="#3b85a1">Ejemplo:
+				Hemsworth.</font> ]]>
+				
+				
+				
 
 				
         	</html>
@@ -428,9 +467,15 @@
 		<popup id="pop_sexo" width="200px">
 			<html>
 
-				<![CDATA[ Por favor, indique el género del Padrino
-				que desea registrar.<br /><font
-				color="#3b85a1">Ejemplos: Masculino.</font> ]]>
+
+
+				
+				<![CDATA[ Por favor, indique el género del Padrino que
+				desea registrar.<br /><font color="#3b85a1">Ejemplos:
+				Masculino.</font> ]]>
+				
+				
+				
 
         	</html>
 		</popup>
@@ -438,20 +483,32 @@
 		<popup id="pop_fecha_nacimiento" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la fecha de nacimiento del
 				Padrino que desea registrar, usando el selector de
 				fechas.<br /> <font color="#3b85a1">Ejemplo:
 				11/08/1983.</font> ]]>
+				
+				
+				
 
         	</html>
 		</popup>
 
 		<popup id="pop_estado" width="200px">
 			<html>
+
+
+
 				
 				<![CDATA[ Por favor, indique el estado donde reside el
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Lara.</font> ]]>
+				
+				
+				
 	
         	</html>
 		</popup>
@@ -459,9 +516,15 @@
 		<popup id="pop_ciudad" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la ciudad donde reside el
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Cabudare.</font> ]]>
+				
+				
+				
 
         	</html>
 		</popup>
@@ -469,22 +532,34 @@
 		<popup id="pop_fecha_ingreso" width="200px">
 			<html>
 
+
+
+
 				
 				<![CDATA[ Por favor, indique la fecha de ingreso al
 				sistema del Padrino que desea registrar, usando el
 				selector de fechas.<br /> <font color="#3b85a1">Ejemplo:
 				28/09/2016.</font> ]]>
 				
+				
+				
+				
         	</html>
 		</popup>
 
 		<popup id="pop_direccion" width="200px">
 			<html>
+
+
+
 				
 				<![CDATA[ Por favor, indique la dirección donde reside
 				el Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Urb. Los Cerezos Casa
 				30.</font> ]]>
+				
+				
+				
 
 				
         	</html>
@@ -493,9 +568,15 @@
 		<popup id="pop_imagen" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, usando el icono de 'agregar' de
 				color verde, anexe una imagen del Padrino que desea
 				registrar.]]>
+				
+				
+				
 	
     		</html>
 		</popup>
@@ -503,9 +584,15 @@
 		<popup id="pop_telefono1" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique el teléfono principal del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 04166556221.</font> ]]>
+				
+				
+				
 				
     		</html>
 		</popup>
@@ -513,9 +600,15 @@
 		<popup id="pop_telefono2" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique un teléfono secundario del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -523,9 +616,15 @@
 		<popup id="pop_fax" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique el número de fax del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -533,10 +632,16 @@
 		<popup id="pop_correo" width="200px">
 			<html>
 
+
+
+
 				
 				<![CDATA[ Por favor, indique un correo electrónico del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: 02516354816.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -544,9 +649,15 @@
 		<popup id="pop_twitter" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta del Twitter del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: @Nombre.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -554,9 +665,15 @@
 		<popup id="pop_instagram" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta de Instagram del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -564,9 +681,15 @@
 		<popup id="pop_facebook" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta de Facebook del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
@@ -574,27 +697,45 @@
 		<popup id="pop_linkedin" width="200px">
 			<html>
 
+
+
+				
 				<![CDATA[ Por favor, indique la cuenta de LinkedIn del
 				Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: NombreCuenta.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
 
 		<popup id="pop_web" width="200px">
 			<html>
+
+
+				
 				<![CDATA[ Por favor, indique la dirección url del sitio
 				web del Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: www.sitioweb.com.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
-		
+
 		<popup id="pop_frecuencia" width="200px">
 			<html>
-				<![CDATA[ Por favor, indique la frecuencia con
-				la que aportará Padrino que desea registrar.<br /><font
+
+
+				
+				<![CDATA[ Por favor, indique la frecuencia con la que
+				aportará Padrino que desea registrar.<br /><font
 				color="#3b85a1">Ejemplo: Mensual.</font> ]]>
+				
+				
+				
 
     		</html>
 		</popup>
